Fix some small css issues

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <title>Frontend Mentor | Product preview card component</title>
     </head>
     <body>
-        <div class="card">
+        <main class="card">
             <div class="imageWrapper">
                 <picture>
                     <source media="(min-width: 640px)" srcset="images/image-product-desktop.jpg" />
-                    <img src="images/image-product-mobile.jpg" alt="" srcset="" class="image" />
+                    <img src="images/image-product-mobile.jpg" alt="product image" class="image" />
                 </picture>
             </div>
             <div class="contentWrapper">
@@ -33,9 +33,9 @@
                     <div class="currentPrice">$149.99</div>
                     <div class="oldPrice">$169.99</div>
                 </div>
-                <div class="button"><img src="images/icon-cart.svg" alt="" /> Add to Cart</div>
+                <div class="button"><img src="images/icon-cart.svg" alt="Cart Icon" /> Add to Cart</div>
             </div>
-        </div>
+        </main>
     </body>
     <script>
         document.write('<script src="http://' + (location.host || "localhost").split(":")[0] + ':35729/livereload.js?snipver=1"></' + "script>");
