--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
             <div class="contentWrapper">
                 <div class="subtitle">Perfume</div>
-                <div class="productName">Gabrielle Essence Eau De Parfum</div>
+                <h1 class="productName">Gabrielle Essence Eau De Parfum</h1>
                 <div class="productDescription">
                     A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.
                 </div>
